<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:background="@color/app_bg"
              android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/all_title_layout"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/login_phone_tv"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/phone_num_str"
                        android:textColor="@color/col_333"
                        android:textSize="@dimen/ac_text_size_16"/>
                    <EditText
                        android:inputType="phone"
                        android:maxLength="11"
                        android:id="@+id/login_input_phone_edt"
                        android:layout_toLeftOf="@+id/login_getcode_tv"
                        android:layout_toRightOf="@+id/login_phone_tv"
                        android:textColorHint="@color/col_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/regist_hint_phone_str"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:textColor="@color/col_333"
                        android:textSize="@dimen/ac_text_size_16"/>

                    <TextView
                        android:padding="16dp"
                        android:background="@drawable/get_code_shap"
                        android:id="@+id/login_getcode_tv"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_code_str"
                        android:textColor="@color/col_hint"
                        android:textSize="@dimen/ac_text_size_14"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_bg" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/login_code_tv"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/code_num_str"
                        android:textColor="@color/col_333"
                        android:textSize="@dimen/ac_text_size_16"/>
                    <EditText
                        android:inputType="number"
                        android:maxLength="6"
                        android:id="@+id/login_code_edt"
                        android:layout_toRightOf="@+id/login_code_tv"
                        android:textColorHint="@color/col_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/regist_hint_code_str"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:textColor="@color/col_333"
                        android:textSize="@dimen/ac_text_size_16"/>
                </RelativeLayout>

            </LinearLayout>
            <TextView
                android:textColor="@color/col_hint"
                android:visibility="gone"
                android:id="@+id/login_hint_send_code_tv"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/regist_next_code_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:enabled="false"
                android:id="@+id/login_next"
                android:textSize="@dimen/ac_text_size_18"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/login_str"
                android:background="@drawable/gray_round_shap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/qblue"
                android:visibility="visible"
                android:id="@+id/login_use_psd_login_tv"
                android:layout_marginLeft="15dp"
                android:text="@string/use_psd_login_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
